Fix overflow on dynamic resize for route view container.

--- a/src/app/modules/HomePage/homepage.scss
+++ b/src/app/modules/HomePage/homepage.scss
@@ -42,6 +42,7 @@ $search_and_filter_bar_height: 40px;
 
         .route-view-container {
           @include transition(transform $transition_time $transition_function);
+          overflow: hidden;
           padding-top: $search_bar_height;
           padding-bottom: 10px;
           background-color: $light_white;
